modif api du quinze septembre
